
2021-01-22  Ron Norman <rjn@inglenet.com>
	* Makefile.am: corrections to changes previously made
	* fileio.c: report any error from loading a module that should be present

2021-01-22  Ron Norman <rjn@inglenet.com>

	* common.c: Add check for COB_DEBUG_LOG not defined
	* fodbc.c,fsqlxfd.c: set db->no_for_update for SQLite

2021-01-22  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: changes for delay-load libraries (INDEXED)
	  pass specific CFLAGS and LDFLAGS, link against libcob, lt-version 1
	* fileio.c (io_rtns): module name with environment specific prefix
	  and suffix
	* fileio.h externalized file_globptr, file_setptr
	* fisam.c: externalized cob_isam_init_fileio
	* call.c (cob_load_lib): nicer error output
	* fileio.c: adjusted error handling for module load: don't exit on errors
	  in cob_load_module but handle error after calling it
	* fileio.c, coblocal.h: added cob_io_name, extend cob_io_version to
	  output a verbose error upon request
	* common.c: get name and version for file handlers from fileio,
	  pass verbose option to fileio on use --info

2021-01-21  Simon Sobisch <simonsobisch@gnu.org>

	* fodbc.c (join_environment): set db->postgres when PostgreSQL

2021-01-21  Ron Norman <rjn@inglenet.com>

	* fodbc.c: Add some code to check for using SQLite

2021-01-16  James K. Lowden  <jklowden@symas.com>

	* general: removed likely and unlikely, never use __builtin_expect

2021-01-15  Ron Norman <rjn@inglenet.com> 

	* fileio.c: Include isconfig/iswrap if HAVE_ISCONFIG_H and HAVE_ISWRAP_H

2021-01-14  Ron Norman <rjn@inglenet.com> 

	* fileio.c: Improved check for D-ISAM file for 7.2

2021-01-12  Ron Norman <rjn@inglenet.com> 

	* fileio.c: Added a flag 'config' to the table of I/O modules
	            so that it is now which ones had been configured 
	* fisam.c: Additional work for ISAM logging/transaction ability
	           VB-ISAM 2.2 in default and CISAM mode works fine
	           D-ISAM 7.2 is also working in transaction mode
